# SkySearch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  start_dev_environment.sh
SkySearchImages/: Extended_Dataset.csv  Extended_Dataset_with_predictions.csv  Gemini_Claude_Evaluation.ipynb  Recognition Data Set Images.csv  SkySearch Images.xlsx  get_llm_results.py  result_analysis.ipynb
setup/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: GeminiLLM.py  GroundControl.py  LLM.py  UAV.py  drone_on_private.py  main.py  manual_pilot_mode.py  simple.py  streamlit_app.py  streamlit_html_helper.py  testcode.py  yolo_helper.py
src/drafts/: Hand-Signals.py  Object-Follower.py  Speech-Commands.py  drone_on_private.py  manual_pilot_mode.py
src/drafts/Q3_presentation/: Speech-Commands.py  testcode.py
src/ground_control_app/: streamlit_app.py
src/utils/: streamlit_html_helper.py  yolo_helper.py
tests/: full_functionality.py  ground_control_test.py  llm_test.py  uav_test.py
