[build-system]
requires = ["setuptools>=42",
            "pandas",
            "numpy",
            "datetime",
            "keyboard",
            "time",
            "threading",
            "socket",
            "sys",
            "pygame",
            "streamlit>=1.30",
            "streamlit-webrtc>=0.47",
            "opencv-python>=4.9"]
build-backend = "setuptools.build_meta"