[metadata]
name = SkySearch
version = 0.0.1
author = Duncan Calvert, Joon Park, Zach Farahany, Mohammad Ayan Rahel
author_email = duncanscalvert@gmail.com
description = SkySearch is an open source Python package that allows simple, flexible, and robust DJI drone swarm capabilities tailored for search and rescue.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DonutsDuncan/SkySearch_UAV.git
project_urls =
    Bug Tracker = https://github.com/DonutsDuncan/SkySearch_UAV/issues
    repository = https://github.com/DonutsDuncan/SkySearch_UAV.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src